Bug 1557587 - part 1: Make `BrowserParent::RecvSetDimensions()` adjust given value with current scale r=jfkthame

If `nsGlobalWindowOuter::ResizeTo()` etc is called before receiving
`BrowserChild::RecvUIResolutionChanged()`, the `aX`, `aY`, `aCx` and `aCy`
values are computed with old scale.

This patch makes `BrowserChild::SendSetDimensions()` set scale in the
remote process and `BrowserParent::RecvSetDimensions()` recompute each
value with current scale.

Differential Revision: https://phabricator.services.mozilla.com/D54150